--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<div class="logo">
 			<hr class="line-1">
 			<a href="#">Гарик FOOD</a>
-			<span>Желаем Вам приятного аппетита!</span>
+			<span>Игорь Токмаков желаем Вам приятного аппетита!</span>
 			<hr class="line-1">
 		</div>
 		<div id='cssmenu' class="align-center">
