--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<div class="logo">
 			<hr class="line-1">
 			<a href="#">Гарик FOOD</a>
-			<span>Игорь Токмаков желаем Вам приятного аппетита!</span>
+			<span>Мы надеемся, что вам понравится каждая частица наших блюд.<br>Bon appetit</span>
 			<hr class="line-1">
 		</div>
 		<div id='cssmenu' class="align-center">
@@ -153,7 +153,7 @@
 					<div class="row">
 						<div class="col-1-3">
 							<div class="wrap-col">
-								<p>Copyright - Designed by <a href="https://vk.com/dollarbabys">Пашка Невгодовский</a></p>
+								<p>Сайт сделал <a href="https://vk.com/dollarbabys">Токмаков Игорь</a></p>
 							</div>
 						</div>
 						<div class="col-1-3">
